--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -49,7 +49,7 @@
             </h3>
             <ul class="mt-4 space-y-4">
               <li>
-                <%= link_to "About Us", "#", class: "text-base text-gray-500 hover:text-emerald-600" %>
+                <%= link_to "About Us", about_us_path, class: "text-base text-gray-500 hover:text-emerald-600" %>
               </li>
               <li>
                 <%= link_to "Careers", "#", class: "text-base text-gray-500 hover:text-emerald-600" %>
