--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
-<div class="bg-gray-100 flex flex-col justify-center pt-4 md:pt-8 pb-8 md:pb-16 px-6 lg:px-8">
+<div class="flex flex-col justify-center pt-0 md:pt-8 pb-8 md:pb-16 px-6 lg:px-8">
   <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
-    <div class="bg-white py-8 px-6 shadow rounded-lg sm:px-10">
+    <div class="bg-white py-8 md:px-8 rounded-lg sm:px-10">
       <div class="sm:mx-auto sm:w-full sm:max-w-md">
         <h2 class="text-left text-3xl font-extrabold text-gray-900">
           Sign up
