--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -62,6 +62,7 @@
   <!-- Dark overlay -->
   <div class="fixed inset-0 bg-black bg-opacity-50 backdrop-blur-sm z-40 hidden" data-navbar-target="overlay" data-action="click->navbar#toggleMenu"></div>
 
+
   <!-- Mobile menu, show/hide based on menu state. -->
   <div class="lg:hidden fixed inset-y-0 right-0 max-w-xs w-full bg-white shadow-xl overflow-y-auto z-50 transform ease-in-out duration-300 translate-x-full" data-navbar-target="menu">
     <div class="py-2 px-4">
@@ -85,7 +86,7 @@
               <%= link_to "Home", root_path, class: "text-gray-500 hover:text-gray-800 hover:bg-gray-100" %>
             </li>
             <li>
-              <%= link_to "About", "#", class: "text-gray-500 hover:text-gray-800 hover:bg-gray-100" %>
+              <%= link_to "About", about_us_path, class: "text-gray-500 hover:text-gray-800 hover:bg-gray-100" %>
             </li>
             <li>
               <%= link_to "Contact", "#", class: "text-gray-500 hover:text-gray-800 hover:bg-gray-100" %>
