--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,4 +1,4 @@
-<div class="">
+<div class="flex items-center w-full justify-between">
   <%- if controller_name != 'sessions' %>
     <%= link_to "Log in", new_session_path(resource_name), class: "font-medium text-sm text-emerald-900 hover:text-emerald-900" %>
   <% end %>
