--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,16 +1,39 @@
-<% flash.each do |type, message| %>
-  <% flash_classes = case type
-                     when "notice" then "bg-green-100 border-green-400 text-green-700"
-                     when "alert" then "bg-red-100 border-red-400 text-red-700"
-                     else "bg-blue-100 border-blue-400 text-blue-700"
-                     end %>
-  <div class="flash-message border px-4 py-3 rounded relative mb-4 <%= flash_classes %>" role="alert">
-    <span class="block sm:inline"><%= message %></span>
-    <button class="absolute top-0 bottom-0 right-0 px-4 py-3" onclick="this.parentElement.style.display='none';">
-      <svg class="fill-current h-6 w-6" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-        <title>Close</title>
-        <path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/>
-      </svg>
-    </button>
-  </div>
-<% end %>
+<div id="flash-messages-container" class="fixed top-16 left-0 right-0 z-50 pointer-events-none">
+  <% flash.each do |type, message| %>
+    <% flash_classes = case type
+                       when "notice" then "bg-blue-100 border-blue-400 text-blue-700"
+                       when "alert" then "bg-red-100 border-red-400 text-red-700"
+                       else "bg-gray-100 border-gray-700 text-white"
+                       end %>
+    <div class="flash-message border px-4 py-3 rounded relative mb-2 mx-4 <%= flash_classes %> transform translate-y-full opacity-0 transition-all duration-300 ease-out pointer-events-auto" role="alert">
+      <span class="block sm:inline"><%= message %></span>
+      <button class="absolute top-0 bottom-0 right-0 px-4 py-3" onclick="dismissFlash(this.parentElement)">
+        <svg class="fill-current h-6 w-6" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+          <title>Close</title>
+          <path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/>
+        </svg>
+      </button>
+    </div>
+  <% end %>
+</div>
+
+<script>
+  document.addEventListener('turbo:load', () => {
+    const flashMessages = document.querySelectorAll('.flash-message');
+    flashMessages.forEach(message => {
+      setTimeout(() => {
+        message.classList.remove('translate-y-full', 'opacity-0');
+      }, 100);
+      setTimeout(() => {
+        dismissFlash(message);
+      }, 2000);
+    });
+  });
+
+  function dismissFlash(element) {
+    element.classList.add('translate-y-full', 'opacity-0');
+    setTimeout(() => {
+      element.remove();
+    }, 300);
+  }
+</script>
