--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,14 +42,14 @@
             <div>
               <button type="button" class="bg-white rounded-full flex text-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-500" id="user-menu-button" aria-expanded="false" aria-haspopup="true" data-action="click->dropdown#toggle">
                 <span class="sr-only">Open user menu</span>
-                <img class="h-10 w-10 rounded-full" src="<%= 'https://via.placeholder.com/40' %>" alt="">
+                <%= image_tag url_for(current_user.avatar), class: "h-10 w-10 rounded-full" %>
               </button>
             </div>
             <!-- Dropdown menu, show/hide based on menu state. -->
             <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none transition-all duration-300 ease-out opacity-0 scale-95 invisible" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1" data-dropdown-target="menu">
               <%= link_to "Your Profile", edit_user_registration_path, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100", role: "menuitem", tabindex: "-1" %>
               <%= link_to "Settings", "#", class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100", role: "menuitem", tabindex: "-1" %>
-              <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100", role: "menuitem", tabindex: "-1" %>
+              <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100", role: "menuitem", tabindex: "-1", data: { turbo_method: :delete } %>
             </div>
           </div>
         <% else %>
@@ -83,33 +83,33 @@
         <nav>
           <ul class="grid gap-y-6">
             <li>
-              <%= link_to "Home", root_path, class: "text-gray-500 hover:text-gray-800 hover:bg-gray-100" %>
+              <%= link_to "Home", root_path, class: "text-gray-500 hover:text-gray-800" %>
             </li>
             <li>
-              <%= link_to "About", about_us_path, class: "text-gray-500 hover:text-gray-800 hover:bg-gray-100" %>
+              <%= link_to "My reading list", about_us_path, class: "text-gray-500 hover:text-gray-800" %>
             </li>
             <li>
-              <%= link_to "Contact", "#", class: "text-gray-500 hover:text-gray-800 hover:bg-gray-100" %>
+              <%= link_to "Bookmarks", "#", class: "text-gray-500 hover:text-gray-800" %>
             </li>
           </ul>
         </nav>
       </div>
     </div>
-    <div class="py-2 absolute right-0 left-0 bottom-0 border-t border-gray-200">
+    <div class="py-2 absolute right-0 left-0 bottom-6 border-t border-gray-200">
       <% if user_signed_in? %>
-        <div class="flex items-center px-4">
+        <div class="flex items-center px-4 mb-4">
           <div class="flex-shrink-0">
-            <img class="h-10 w-10 rounded-full" src="<%= 'https://via.placeholder.com/40' %>" alt="">
+            <%= image_tag url_for(current_user.avatar), class: "h-10 w-10 rounded-full" %>
           </div>
           <div class="ml-3">
             <div class="text-base font-medium text-gray-800"><%= current_user.username %></div>
             <div class="text-sm font-medium text-gray-500"><%= current_user.email %></div>
           </div>
         </div>
-        <div class="mt-2 space-y-1">
-          <%= link_to "Your Profile", edit_user_registration_path, class: "block px-4 py-2 text-base font-medium text-gray-500 hover:text-gray-800 hover:bg-gray-100" %>
-          <%= link_to "Settings", "#", class: "block px-4 py-2 text-base font-medium text-gray-500 hover:text-gray-800 hover:bg-gray-100" %>
-          <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "block px-4 py-2 text-base font-medium text-gray-500 hover:text-gray-800 hover:bg-gray-100" %>
+        <div class="space-y-2">
+          <%= link_to "Your Profile", edit_user_registration_path, class: "block px-4 text-base font-medium text-gray-500 hover:text-gray-800" %>
+          <%= link_to "Settings", "#", class: "block px-4 text-base font-medium text-gray-500 hover:text-gray-800" %>
+          <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "block px-4 text-base font-medium text-gray-500 hover:text-gray-800", data: { turbo_method: :delete } %>
         </div>
       <% else %>
         <div class="mt-2 space-y-1">
