--- a/app/views/static/_hero.html.erb
+++ b/app/views/static/_hero.html.erb
@@ -1,11 +1,11 @@
 <section class="bg-emerald-50">
   <div class="container mx-auto px-4 lg:pl-24 py-8 sm:py-16">
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
-      <div>
+      <div class="flex flex-col items-center md:items-start">
         <h1 class="text-xl sm:text-3xl font-bold text-emerald-900">
           Rediscover the Joy of Reading
         </h1>
-        <p class="text-base text-emerald-800 mb-2 pr-12">
+        <p class="text-base text-emerald-800 mb-2 text-center md:text-left px-4 md:px-0 md:pr-8 lg:pr-12">
           Discover a world of possibilities with our carefully curated collection of books. Read more and read better with bukclub.
         </p>
         <div class="space-x-4">
