--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,1 +1,7 @@
 <%= render "static/hero" %>
+
+<div class="container mx-auto px-4 mt-6 mb-10">
+  <div class="grid grid-cols-12 gap-6">
+    <%= render partial: "books/book", collection: @books %>
+  </div>
+</div>
