--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,13 +4,13 @@
   <div class="bg-white overflow-hidden">
     <div class="md:flex">
       <div class="md:flex-shrink-0 relative">
-        <div class="absolute inset-0 bg-gradient-to-b from-black/80 via-black/50 to-transparent h-1/4"></div>
-        <div class="absolute left-3 top-3">
+        <div class="block md:hidden absolute inset-0 bg-gradient-to-b from-black/80 via-black/50 to-transparent h-1/4"></div>
+        <div class="absolute left-3 top-3 block md:hidden">
           <%= link_to "← Back to Books", root_path, class: "text-white hover:text-gray-200" unless hotwire_native_app? %>
         </div>
-        <div class="absolute right-3 top-3">
-          <%= link_to "Review book", root_path, class: "text-white hover:text-gray-200" %>
-        </div>
+        <% if user_signed_in? %>
+          <%= link_to "Review book", new_book_review_path(@book.slug), class: "absolute right-3 top-3 text-white hover:text-gray-200" %>
+        <% end %>
         <%= image_tag @book.cover, class: "h-64 w-full object-cover md:w-48" %>
       </div>
       <div class="py-4 px-6">
@@ -30,6 +30,18 @@
           <p class="text-gray-600"><%= @book.description %></p>
         </div>
       </div>
+    </div>
+    <div class="flex flex-col px-6">
+      <h2 class="text-base font-semibold text-gray-800">Reviews</h2>
+      <p class="text-gray-500 text-sm">Want to know what other people think? Here are some reviews from our users:</p>
+      <ul class="divide-y divide-gray-200">
+        <% @book.reviews.each do |review| %>
+          <div class="py-2">
+            <p class="text-sm font-bold text-gray-800"><%= review.user.username %></p>
+            <p class="text-gray-600"><%= review.content %></p>
+          </div>
+        <% end %>
+      </ul>
     </div>
   </div>
 </div>
