--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -4,4 +4,10 @@
   <div class="grid grid-cols-12 gap-6">
     <%= render partial: "books/book", collection: @books %>
   </div>
-</div>
+  <% unless user_signed_in? %>
+    <div class="mt-6">
+      <%= link_to "Sign up", new_user_registration_path, class: "bg-emerald-500 hover:bg-emerald-700 text-white font-bold py-2 px-4 rounded" %>
+      <%= link_to "Sign in", new_user_session_path, class: "bg-emerald-500 hover:bg-emerald-700 text-white font-bold py-2 px-4 rounded" %>
+    </div>
+  <% end %>
+  </div>
