--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,6 @@
     <%= render "shared/flash_messages" %>
     <%= yield %>
     <%= render "shared/footer" unless hotwire_native_app? %>
-    <%= render "shared/bottom_bar" unless hotwire_native_app? %>
+    <%= render "shared/bottom_bar" %>
   </body>
 </html>
