--- a/app/views/shared/_bottom_bar.html.erb
+++ b/app/views/shared/_bottom_bar.html.erb
@@ -1,4 +1,4 @@
-<nav class="fixed bottom-0 left-0 right-0 bg-white border-t border-gray-200 shadow-lg">
+<nav class="sm:hidden fixed bottom-0 left-0 right-0 bg-white border-t border-gray-200 shadow-lg">
   <div class="max-w-screen-xl mx-auto px-4">
     <ul class="flex justify-around items-center h-16">
       <li>
