--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,6 @@
 <%= content_for :title, @book.title %>
 
-<div class="max-w-4xl mx-auto">
+<div class="max-w-screen-lg mx-auto my-8">
   <div class="bg-white overflow-hidden">
     <div class="md:flex">
       <div class="md:flex-shrink-0 relative">
@@ -11,9 +11,9 @@
         <% if user_signed_in? %>
           <%= link_to "Review book", new_book_review_path(@book.slug), class: "absolute right-3 top-3 text-white hover:text-gray-200" %>
         <% end %>
-        <%= image_tag @book.cover, class: "h-64 w-full object-cover md:w-48" %>
+        <%= image_tag @book.cover, class: "h-72 w-full object-cover md:w-48" %>
       </div>
-      <div class="py-4 px-6">
+      <div class="py-4 px-8">
         <div class="flex justify-between text-sm text-gray-500">
           <p>ISBN: <%= @book.isbn %></p>
           <p><%= @book.pages_count %> pages</p>
@@ -33,15 +33,15 @@
     </div>
     <div class="flex flex-col px-6">
       <h2 class="text-base font-semibold text-gray-800">Reviews</h2>
-      <p class="text-gray-500 text-sm">Want to know what other people think? Here are some reviews from our users:</p>
-      <ul class="divide-y divide-gray-200">
-        <% @book.reviews.each do |review| %>
-          <div class="py-2">
-            <p class="text-sm font-bold text-gray-800"><%= review.user.username %></p>
-            <p class="text-gray-600"><%= review.content %></p>
-          </div>
-        <% end %>
-      </ul>
+      <% if @book.reviews.any? %>
+        <ul class="divide-y divide-gray-200">
+          <% @book.reviews.each do |review| %>
+            <%= render "reviews/review", review: review %>
+          <% end %>
+        </ul>
+      <% else %>
+        <p class="text-gray-500 text-base">No reviews yet. Be the first to review this book.</p>
+      <% end %>
     </div>
   </div>
 </div>
