--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
-<nav class="bg-white border-b border-gray-100" data-controller="navbar">
-  <div class="container mx-auto px-2 sm:px-4 lg:px-8">
+<nav class="bg-white border-b border-neutral-200" data-controller="navbar">
+  <div class="max-w-screen-xl mx-auto px-2 sm:px-4 lg:px-8">
     <div class="flex justify-between h-16">
       <div class="flex px-2 lg:px-0">
         <div class="flex-shrink-0 flex items-center">
@@ -42,18 +42,23 @@
             <div>
               <button type="button" class="bg-white rounded-full flex text-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-500" id="user-menu-button" aria-expanded="false" aria-haspopup="true" data-action="click->dropdown#toggle">
                 <span class="sr-only">Open user menu</span>
-                <%= image_tag url_for(current_user.avatar), class: "h-10 w-10 rounded-full" %>
+                <% if current_user.avatar.attached? %>
+                  <%= image_tag url_for(current_user.avatar), class: "h-10 w-10 rounded-full" %>
+                <% else %>
+                  <%= content_tag :div, "", class: "h-10 w-10 rounded-full bg-gray-100" %>
+                <% end %>
               </button>
             </div>
             <!-- Dropdown menu, show/hide based on menu state. -->
             <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none transition-all duration-300 ease-out opacity-0 scale-95 invisible" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1" data-dropdown-target="menu">
-              <%= link_to "Your Profile", edit_user_registration_path, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100", role: "menuitem", tabindex: "-1" %>
+              <%= link_to "Your Profile", profile_path, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100", role: "menuitem", tabindex: "-1" %>
               <%= link_to "Settings", "#", class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100", role: "menuitem", tabindex: "-1" %>
               <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100", role: "menuitem", tabindex: "-1", data: { turbo_method: :delete } %>
             </div>
           </div>
         <% else %>
-          <%= link_to "Sign up", new_user_registration_path, class: "ml-8 whitespace-nowrap inline-flex items-center justify-center px-4 py-1.5 border border-transparent rounded-full shadow-sm text-base font-medium text-white bg-emerald-600 hover:bg-emerald-700" %>
+          <%= link_to "Sign In", new_user_session_path, class: "ml-4 whitespace-nowrap inline-flex items-center justify-center px-3 py-1 border border-gray-800 rounded-full shadow-sm text-base font-medium text-gray-800 bg-transparent hover:bg-gray-800 hover:text-white duration-300 transition-all" %>
+          <%= link_to "Sign up", new_user_registration_path, class: "ml-4 whitespace-nowrap inline-flex items-center justify-center px-3 py-1 border border-transparent rounded-full shadow-sm text-base font-medium text-white bg-emerald-600 hover:bg-emerald-700" %>
         <% end %>
       </div>
     </div>
@@ -99,7 +104,11 @@
       <% if user_signed_in? %>
         <div class="flex items-center px-4 mb-4">
           <div class="flex-shrink-0">
-            <%= image_tag url_for(current_user.avatar), class: "h-10 w-10 rounded-full" %>
+            <% if current_user.avatar.attached? %>
+              <%= image_tag url_for(current_user.avatar), class: "h-10 w-10 rounded-full" %>
+            <% else %>
+              <%= content_tag :div, "", class: "h-10 w-10 rounded-full bg-gray-100" %>
+            <% end %>
           </div>
           <div class="ml-3">
             <div class="text-base font-medium text-gray-800"><%= current_user.username %></div>
