--- a/app/views/static/_hero.html.erb
+++ b/app/views/static/_hero.html.erb
@@ -1,5 +1,5 @@
 <section class="bg-emerald-50">
-  <div class="container mx-auto px-4 lg:pl-24 py-8 sm:py-16">
+  <div class="max-w-screen-xl mx-auto px-2 lg:pl-12 py-8 sm:py-16">
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
       <div class="flex flex-col items-center md:items-start">
         <h1 class="text-xl sm:text-3xl font-bold text-emerald-900">
