Add link to 'blog' from the footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -55,7 +55,7 @@
                 <%= link_to "Careers", "#", class: "text-base text-gray-500 hover:text-emerald-600" %>
               </li>
               <li>
-                <%= link_to "Blog", "#", class: "text-base text-gray-500 hover:text-emerald-600" %>
+                <%= link_to "Blog", blog_path, class: "text-base text-gray-500 hover:text-emerald-600" %>
               </li>
               <li>
                 <%= link_to "Press", "#", class: "text-base text-gray-500 hover:text-emerald-600" %>
