Work on blog views and add breadcrumbs

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,7 @@
 <%= content_for :title, @book.title %>
 
 <div class="max-w-screen-lg mx-auto my-8">
+  <%= render 'books/breadcrumbs' %>
   <div class="bg-white overflow-hidden">
     <div class="md:flex">
       <div class="md:flex-shrink-0 relative">
