--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,5 @@
+<%= render "shared/schema", schema: @schema %>
+
 <article class="max-w-screen-xl mx-auto px-6 sm:px-8 pt-8 pb-12">
   <div class="grid grid-cols-12 gap-x-8">
     <div class="col-span-9">
