--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/schema", schema: @schema %>
 <%= content_for :title, @book.title %>
 
 <div class="max-w-screen-lg mx-auto my-8">
