--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -43,7 +43,7 @@
               <button type="button" class="bg-white rounded-full flex text-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-500" id="user-menu-button" aria-expanded="false" aria-haspopup="true" data-action="click->dropdown#toggle">
                 <span class="sr-only">Open user menu</span>
                 <% if current_user.avatar.attached? %>
-                  <%= image_tag url_for(current_user.avatar), class: "h-10 w-10 rounded-full" %>
+                  <%= image_tag url_for(current_user.avatar), class: "h-10 w-10 rounded-full object-cover" %>
                 <% else %>
                   <%= content_tag :div, "", class: "h-10 w-10 rounded-full bg-gray-100" %>
                 <% end %>
